# PheonixCoin

./: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  CMakeLists.txt  Driver.cpp  Driver.h  Project 2 Phase 2.asd.docx  README.md  Serializer.cpp  Serializer.h  Transaction.cpp  Transaction.h  UML Diagrams.docx  User.cpp  User.h  block.cpp  block.h  blockChain.cpp  blockChain.h  main.cpp  transaction.cpp  transaction.h  user.cpp  user.h
Examples/: blockchain.json  cppConfig - mine example.txt  cppConfig - newtrans example.txt  cppConfig - newuser template.txt  unminedBlock.json  users.json
